# elo_backend

./: Cargo.toml
migrations/: 20220127164457_one.down.sql  20220127164457_one.up.sql  20220128164635_two.up.sql
src/: db_connection.rs  main.rs
src/base/: db.rs  errors.rs  game_state.rs  mod.rs
src/data/: matches.rs  mod.rs  players.rs  teams.rs
src/routes/: match_resource.rs  mod.rs
