[package]
name = "elo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.15.0", features = ["full"] }
sqlx = { version = "0.5", features = ["mysql", "runtime-tokio-rustls", "macros"] }
futures = { version = "0.3" }
rand = "0.6"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
features = ["sqlx_mysql"]

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool", "sqlite_pool"]
